ingress-alb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
   - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "nginx"
              port: 
                number: 5000
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: "my-app-1"
              port: 
                number: 5001
        - path: /user
          pathType: Prefix
          backend:
            service:
              name: "my-app-2"
              port: 
                number: 5002
